fix: textAlign inline styles

--- a/src/shared/ui/Typography/typography.module.scss
+++ b/src/shared/ui/Typography/typography.module.scss
@@ -83,3 +83,19 @@
   color: var(--color-accent-500);
   text-decoration-line: underline;
 }
+
+.align-left {
+  text-align: left;
+}
+
+.align-center {
+  text-align: center;
+}
+
+.align-right {
+  text-align: right;
+}
+
+.align-inherit {
+  text-align: inherit;
+}
